tests/snapshots/examples_fixtures/advanced__functional_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/functional_pipeline.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/functional_pipeline.flx:35:19
   |
35 |     let doubled = map(numbers, /x -> x * 2)
   |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/functional_pipeline.flx:39:19
   |
39 |     let bigNums = filter(numbers, /x -> x > 3)
   |                   ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/functional_pipeline.flx:43:17
   |
43 |     let total = fold(numbers, 0, /(acc, x) -> acc + x)
   |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/functional_pipeline.flx:47:24
   |
47 |     let totalProduct = fold(numbers, 1, /(acc, x) -> acc * x)
   |                        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/functional_pipeline.flx:73:11
   |
73 |     match first(names) {
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E300]: Match Arm Type Mismatch

The arms of this `match` expression do not agree on a type.

  examples/advanced/functional_pipeline.flx:75:14
   |
74 |         Some(n) -> print(upper(n)),
   |                    --------------- first arm returns `Unit`

   |                    --------------- this arm established the expected type
75 |         _ -> ()
   |              ^^
   |              -- arm 2 has type `()`

   |              -- arm 2 conflicts with that type

Note:
  first arm type: Unit
  this arm type: ()
  the first arm fixes the type expected from the whole `match`
  this arm produces the competing type

Help:
  Change arm 2 so every arm returns the same type.


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/functional_pipeline.flx:78:11
   |
78 |     match first(rest(names)) {
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/functional_pipeline.flx:88:22
   |
88 |     let uppercased = map(words, /w -> w |> upper)
   |                      ^^^

Hint:
  Define it first: let map = ...;

Found 8 errors.
== stdout ==
<not executed>
